# HyPhi

./: .gitignore  LICENSE  Makefile  README.md  TODOs.md  WALKTHROUGH.md  curvature_functions.py  curvature_visualisation.py  environment.yml  fnirs tutorial.py  main.py  pyproject.toml  requirements.txt  ricci_flow_analysis.py  tutorial.ipynb
Ricci-Flow/: README.md  ricci_flow_analysis.py
artifacts/: plan_refactor_hyphi.md
code/: README.md  README_Ricci-Flow.md
code/configs/: config.toml
code/hyphi/: __init__.py  analyses.py  benchmarks.py  configs.py  io.py  io_brainhack.py  main.py  null_models.py  simulations.py  stats.py  template.py
code/hyphi/communities_centrality/: __init__.py  adjacency_from_pickle.py  first_pipeline.py  main.py  processing.py  temporal_tensor.py
code/hyphi/communities_centrality/data/: 01_prebase_graph.pkl  02_prebase_graph.pkl  03_prebase_graph.pkl  04_prebase_graph.pkl  05_prebase_graph.pkl  06_prebase_graph.pkl  07_prebase_graph.pkl  08_prebase_graph.pkl  09_prebase_graph.pkl  10_prebase_graph.pkl  11_prebase_graph.pkl  12_prebase_graph.pkl  13_prebase_graph.pkl  14_prebase_graph.pkl  15_prebase_graph.pkl  16_prebase_graph.pkl  17_prebase_graph.pkl  18_prebase_graph.pkl  19_prebase_graph.pkl  20_prebase_graph.pkl  21_prebase_graph.pkl  22_prebase_graph.pkl  23_prebase_graph.pkl  24_prebase_graph.pkl  25_prebase_graph.pkl  26_prebase_graph.pkl  27_prebase_graph.pkl  28_prebase_graph.pkl  29_prebase_graph.pkl
code/hyphi/modeling/: GDD_FRc_helpers.py  curvatures.py  density_estimation.py  entropies.py  graph_curvatures.py  graph_simulations.py  ricci_flow_analysis.py  transform_curvature.py  windowing.py
code/hyphi/simulation/: graph_simulations.py  kuramoto_simulations.py  simulations.py
code/hyphi/spectral/: __init__.py  adjacency_from_pickle.py  diffusion_distance.py  laplace.py
code/hyphi/visualization/: GDD_FRc_visualization.py  curvature_visualisation.py  network_plots.py
code/notebooks/: GDD_FRc_Kuramoto.ipynb  GDD_FRc_prebase.ipynb  connectome_kuramoto.ipynb  hyphi.ipynb  hyphi_explore.py  network_checks.ipynb
code/tests/: __init__.py  test_analyses.py  test_benchmarks.py  test_conf.py  test_curvatures.py  test_entropies.py  test_hyphi.py  test_null_models.py  test_stats.py  test_windowing.py
data/: README.md
experiments/: README.md
experiments/analysis/: CCORRconfig_001.toml  fully_pooled_AFRC_energy_stat_trial_types_n_perm_2000_ sample_size_100000.json
experiments/configs/: CCORRconfig_001.toml
experiments/scripts/: README.md  demonstrate_ccorr_adjusted.py  hierarchical_stats_runner.py  hyper_ccor_ragg_frc.py  hyper_ccorr_aug_frc.py  hyper_ccorr_frc.py  hyper_ccorr_orc.py  kuramoto_frc.py  neureps_simulations.py  plot_fully_pooled_dists.py  plot_hyper_ccorr_aug_frc.py  plot_hyper_ccorr_frc.py  plot_kuramoto_curv.py
miscellaneous/: HyPhi_FRC_examples.md  README.md
scripts/: badge.sh
software_module/: Entropies.py  FileIO.py  GraphSimulations.py  HyperCCORRAugFRC.py  HyperCCORRFRC.py  HyperCCORRORC.py  HyperCCORRaggFRC.py  KuramotoFRC.py  NeuRepsSimulations.py  PlotFullyPooledDists.py  PlotHyperCCORRAugFRC.py  PlotHyperCCORRFRC.py  PlotKuramotoCurv.py  README.md  connectivity_data.pkl  connectome_kuramoto.ipynb  demonstrate_ccorr_adjusted.py  fnirs tutorial.py
software_module/fnirs/: README.md  fnirs_ecg_vr.py  fnirs_ecg_vr2.py
src/hyphi/: __init__.py  analyses.py  benchmarks.py  curvatures.py  density.py  entropies.py  io.py  io_utils.py  null_models.py  simulations.py  stats.py  windowing.py
tests/: conftest.py  test_analyses.py  test_curvatures.py  test_entropies.py  test_windowing.py
todo_sort/experiments/: fully_pooled_FRC_energy_stat_trial_types_n_perm_2000_ sample_size_100000.json
todo_sort/software_module/: DensityEstimation.py  Entropies.py  FileIO.py  GraphCurvatures.py  GraphSimulations.py  HyperCCORRAugFRC.py  HyperCCORRFRC.py  HyperCCORRORC.py  HyperCCORRaggFRC.py  KuramotoFRC.py  KuramotoSimulations.py  NeuRepsSimulations.py  PlotFullyPooledDists.py  PlotHyperCCORRAugFRC.py  PlotHyperCCORRFRC.py  PlotKuramotoCurv.py  README.md  TestCases.py  connectome_kuramoto.ipynb  demonstrate_ccorr_adjusted.py
tutorials/: HyPhi_FRC_examples.md  README.md
