[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hyphi"
version = "0.1.0"
description = "A Python package for hyperscanning data analysis via geometric entropy."
readme = "README.md"
authors = [
    { name = "Nicolas Hinrichs" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "networkx",
    "mne",
    "GraphRicciCurvature",
    "KDEpy",
    "statsmodels",
    "scikit-learn"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
